--- a/templates/gitweb.conf.erb
+++ b/templates/gitweb.conf.erb
@@ -1,5 +1,5 @@
 # path to git projects (<project>.git)
-$projectroot = "/var/cache/git";
+$projectroot = "<%= scope.lookupvar('gitweb::settings::projectroot') %>";
 
 # directory to use for temp files
 $git_temp = "/tmp";
